front/yourjs/k8s/yourjs-front-deployment.yaml
#yourjs-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yourjs-front-deployment
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: yourjs-front
  template:
    metadata:
      labels:
        app: yourjs-front
    spec:
      containers:
        - name: yourjs-front
          image: pudingles94/project:yourjs-front
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 300m
      imagePullSecrets:
        - name: my-secret
